[gd_scene load_steps=5 format=2]

[ext_resource path="res://encryptor.gd" type="Script" id=1]
[ext_resource path="res://Browse.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]

script/source = "extends FileDialog

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"
var tr
var dircontroller
var nd=\"\"
var cur_selection=\"\"
func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	#connect(\"dir_selected\",self,\"changedir\")
	dircontroller=Directory.new()
	if  OS.get_name()==\"Android\":
		current_dir=\"/sdcard/\"
	tr=(get_vbox().get_child(2).get_child(0))
	add_button(\"Open Folder\",false,\"openfolder\")
	tr.connect(\"cell_selected\",self,\"cell_selected\")
	connect(\"custom_action\",self,\"change\")
func cell_selected():
	cur_selection=(tr.get_selected().get_text(0))
	if dircontroller.dir_exists(current_dir+'/'+cur_selection):
		nd=get_current_dir()+'/'+cur_selection
		print(nd)
		#set_current_dir(nd)
func change(action):
	if action==\"openfolder\":
		if dircontroller.dir_exists(current_dir+'/'+cur_selection) and cur_selection!=\"\":
			nd=get_current_dir()+'/'+cur_selection
			print(nd)
			set_current_dir(nd)
			nd=\"\"
			cur_selection=\"\""

[sub_resource type="GDScript" id=2]

script/source = "extends FileDialog

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"
var tr
var dircontroller
var nd=\"\"
var cur_selection=\"\"
func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	#connect(\"dir_selected\",self,\"changedir\")
	dircontroller=Directory.new()
	if  OS.get_name()==\"Android\":
		current_dir=\"/sdcard/\"
	tr=(get_vbox().get_child(2).get_child(0))
	add_button(\"Open Folder\",false,\"openfolder\")
	tr.connect(\"cell_selected\",self,\"cell_selected\")
	connect(\"custom_action\",self,\"change\")
func cell_selected():
	cur_selection=(tr.get_selected().get_text(0))
	if dircontroller.dir_exists(current_dir+'/'+cur_selection):
		nd=get_current_dir()+'/'+cur_selection
		print(nd)
		#set_current_dir(nd)
func change(action):
	if action==\"openfolder\":
		if dircontroller.dir_exists(current_dir+'/'+cur_selection) and cur_selection!=\"\":
			nd=get_current_dir()+'/'+cur_selection
			print(nd)
			set_current_dir(nd)
			nd=\"\"
			cur_selection=\"\"
	print(\"action\")"

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Message" type="TextEdit" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 235.0
margin_right = 462.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = true
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Caret" ]

[node name="hide" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 585.0
margin_right = 193.0
margin_bottom = 662.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HIDE MESSAGE"
flat = false
align = 1

[node name="show" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 588.0
margin_right = 427.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SHOW MESSAGE"
flat = false
align = 1

[node name="filepath" type="LineEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 117.0
margin_right = 323.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Image Pathh"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder" ]

[node name="Browse" type="Button" parent="filepath" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 3.0
margin_right = 445.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Browse"
flat = false
align = 1
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="filepath/Browse" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -325.0
margin_top = 17.0
margin_right = 112.0
margin_bottom = 550.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "/home/deep/Godot 3/Steg"
current_file = "default_env.tres"
current_path = "/home/deep/Godot 3/Steg/default_env.tres"
script = SubResource( 1 )
_sections_unfolded = [ "Dialog" ]

[node name="Save" type="FileDialog" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 84.0
margin_right = 429.0
margin_bottom = 681.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Save a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 4
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "/home/deep/Godot 3/Steg"
current_file = "hideenmessage.img"
current_path = "/home/deep/Godot 3/Steg/hideenmessage.img"
script = SubResource( 2 )

[connection signal="pressed" from="hide" to="." method="_on_hide_pressed"]

[connection signal="pressed" from="show" to="." method="_on_show_pressed"]

[connection signal="pressed" from="filepath/Browse" to="filepath/Browse" method="_on_Browse_pressed"]

[connection signal="file_selected" from="filepath/Browse/FileDialog" to="filepath/Browse" method="_on_FileDialog_file_selected"]


